<resources>
    <string name="app_name">Bottom Navigation</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_register">Register</string>
    <string name="title_registered">Registered</string>
    <string name="title_list">Leaderboard</string>
    <string name="title_detail">Profile</string>
    <string name="cd_home">Home</string>
    <string name="cd_list">List</string>
    <string name="cd_form">Form</string>
    <string name="profile_image">Profile image</string>
    <string name="user_points">10,000 pts</string>
    <string name="user_rank">#1</string>
    <string name="welcome">Welcome!</string>
    <string name="about">About</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">sign up</string>
    <string name="about_description">This sample showcases navigation using a Bottom Navigation
    View. The state and back stack of the three different screens are persisted.
    </string>
    <string name="profile_name_1">Ali Connors</string>
    <string name="rank">Rank</string>
    <string name="rank_1">#1</string>
    <string name="wins">Wins</string>
    <string name="wins_amount">42</string>
    <string name="losses">Losses</string>
    <string name="losses_amount">03</string>
    <string name="refresh_footer_text">正在玩命加载中...</string>
    <string name="copyright">网易公司版权所有©2019</string>
    <string name="button_splash">点击收听</string>
    <string name="toolbar_button1">Your notice</string>
    <string name="toolbar_button2">Search</string>
</resources>
